[package]
authors = ["norbert gajda <norbert.gajda@gmail.com>"]
edition = "2018"
name = "stm32-test"
readme = "README.md"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
# panic-probe = {version = "0.2", features = ["print-rtt"]}
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = {version = "0.3.0", features = ["print-defmt"]}

[dependencies.stm32f4]
features = ["stm32f411", "rt"]
version = "0.15.1"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
bench = false
name = "stm32-test"
test = false
